--- a/curriculum/css/curriculum_style.css
+++ b/curriculum/css/curriculum_style.css
@@ -134,6 +134,7 @@
   background-color: var(--bgcolor-dark);
   padding: 6px 12px;
   border-radius: 6px;
+  border: none;
   box-shadow: 6px 6px 3px 0 rgba(0, 0, 0, 0.2);
   font-weight: 500;
   text-align: center;
